--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label for="pw"></label>
         <input type="password" id="pw" placeholder="Password" required />
       </div>
-      <div class="keep-signed-in">
+      <div class="save-signed-in">
         <input type="checkbox" id="saveSignedIn" name="saveSignedIn" />
         <label for="saveSignedIn">로그인 정보 저장</label>
       </div>
