--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="title">로그인 성공!</div>
-    <a href="index.html">로그아웃</a>
     <script src="main.js"></script>
+    <button class="logout-btn" onclick="Logout()">로그아웃</button>
+    <button class="delete" onclick="Delete()">회원탈퇴</button>
   </body>
 </html>
