--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="title">로그인 페이지 입니다.</div>
-    <form id="login-form" onsubmit="handleLogin(); return false;">
+    <form id="login-form" onsubmit="Login(); return false;">
       <div class="login">
         <label for="userID"></label>
         <input type="text" id="userID" placeholder="ID" required />
@@ -16,10 +16,6 @@
       <div class="password">
         <label for="pw"></label>
         <input type="password" id="pw" placeholder="Password" required />
-      </div>
-      <div class="save-signed-in">
-        <input type="checkbox" id="saveSignedIn" name="saveSignedIn" />
-        <label for="saveSignedIn">로그인 정보 저장</label>
       </div>
       <button type="submit" class="login-btn">로그인</button>
     </form>
